--- a/Tuin13-Controller/.vscode/settings.json
+++ b/Tuin13-Controller/.vscode/settings.json
@@ -11,6 +11,8 @@
         "memory": "cpp",
         "random": "cpp",
         "initializer_list": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "bitset": "cpp",
+        "cstdlib": "cpp"
     }
 }
