Werkt op ESP8266

--- a/Tuin13-Controller/platformio.ini
+++ b/Tuin13-Controller/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:mhetesp32devkit]
-platform = espressif32
-board = mhetesp32devkit
+platform = espressif8266
+board = nodemcuv2
 framework = arduino
 lib_deps =
    ezTime
