--- a/Tuin13-Controller/platformio.ini
+++ b/Tuin13-Controller/platformio.ini
@@ -8,16 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:mhetesp32devkit]
+[env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
+
 framework = arduino
 lib_deps =
    ezTime
+   ESP Async WebServer
+
+board_build.arduino.ldscript = eagle.flash.1m256.ld
 
 monitor_speed=115200
 monitor_flags =
     -e
 monitor_filters = send_on_enter
-
-   
