Web pagina werkt nu wel zo'n beetje

--- a/Tuin13-Controller/.vscode/settings.json
+++ b/Tuin13-Controller/.vscode/settings.json
@@ -27,5 +27,8 @@
         "algorithm": "cpp",
         "stdexcept": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "editor.fontFamily": "Fira Code, Hack, Consolas, 'Courier New', monospace",
+    "editor.fontSize": 15,
+    "editor.fontLigatures": true
 }
