--- a/Tuin13-Controller/.vscode/settings.json
+++ b/Tuin13-Controller/.vscode/settings.json
@@ -26,9 +26,8 @@
         "ostream": "cpp",
         "algorithm": "cpp",
         "stdexcept": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "iosfwd": "cpp"
     },
-    "editor.fontFamily": "Fira Code, Hack, Consolas, 'Courier New', monospace",
-    "editor.fontSize": 15,
     "editor.fontLigatures": true
 }
