--- a/Tuin13-Controller/platformio.ini
+++ b/Tuin13-Controller/platformio.ini
@@ -8,16 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nodemcuv2
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
+board_build.arduino.ldscript = eagle.flash.1m256.ld
 
 framework = arduino
 lib_deps =
    ezTime
    ESP Async WebServer
+   Adafruit MQTT Library
 
-board_build.arduino.ldscript = eagle.flash.1m256.ld
+monitor_speed=115200
+monitor_flags =
+    -e
+monitor_filters = send_on_enter
+
+[env:release]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+lib_deps =
+   ezTime
+   ESP Async WebServer
+   Adafruit MQTT Library
 
 monitor_speed=115200
 monitor_flags =
