--- a/Tuin13-Controller/platformio.ini
+++ b/Tuin13-Controller/platformio.ini
@@ -11,12 +11,7 @@
 [platformio]
 default_envs = nodemcuv2
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
-board_build.arduino.ldscript = eagle.flash.1m256.ld
-
-framework = arduino
+[env]
 lib_deps =
    ezTime
    ESP Async WebServer
@@ -26,17 +21,16 @@ monitor_speed=115200
 monitor_flags =
     -e
 monitor_filters = send_on_enter
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+board_build.arduino.ldscript = eagle.flash.1m256.ld
+build_flags = -D TESTDEVICE=1
+
 
 [env:release]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps =
-   ezTime
-   ESP Async WebServer
-   Adafruit MQTT Library
-
-monitor_speed=115200
-monitor_flags =
-    -e
-monitor_filters = send_on_enter
